[gd_scene load_steps=7 format=3 uid="uid://e8ajh2rt8q5g"]

[ext_resource type="Texture2D" uid="uid://dq1v6edrcxkv4" path="res://Images/basic_card.png" id="1_as1yr"]
[ext_resource type="Script" uid="uid://bsj7a0hun52jo" path="res://Scripts/UIManager.gd" id="1_felxf"]
[ext_resource type="Texture2D" uid="uid://bdy54yb3tq71" path="res://Images/stone.png" id="2_sjxgx"]
[ext_resource type="Texture2D" uid="uid://cuw86jqyoy45n" path="res://Images/card_zoom_background.png" id="3_a33nh"]
[ext_resource type="FontFile" uid="uid://q6k4rvj4di0k" path="res://Fonts/MedodicaRegular.otf" id="11_vfi26"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y1w80"]
texture = ExtResource("3_a33nh")

[node name="UICanvasLayer" type="CanvasLayer"]
script = ExtResource("1_felxf")

[node name="CardZoomPanel" type="Panel" parent="."]
offset_top = 800.0
offset_right = 200.0
offset_bottom = 1080.0

[node name="CardZoomContainer" type="Control" parent="CardZoomPanel"]
anchors_preset = 0
offset_right = 200.0
offset_bottom = 280.0

[node name="CardZoom" type="TextureRect" parent="CardZoomPanel/CardZoomContainer"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 280.0
texture = ExtResource("1_as1yr")

[node name="SpriteZoom" type="TextureRect" parent="CardZoomPanel/CardZoomContainer"]
layout_mode = 0
offset_left = 22.0
offset_top = 66.0
offset_right = 178.0
offset_bottom = 258.0
texture = ExtResource("2_sjxgx")

[node name="CardZoomLabel" type="Label" parent="CardZoomPanel/CardZoomContainer"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 184.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_vfi26")
theme_override_font_sizes/font_size = 32
text = "Miner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsPanel" type="Panel" parent="."]
offset_left = 200.0
offset_top = 800.0
offset_right = 396.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxTexture_y1w80")

[node name="StatsVBoxContainer" type="VBoxContainer" parent="StatsPanel"]
layout_mode = 0
offset_left = 15.0
offset_top = 17.0
offset_right = 180.0
offset_bottom = 263.0
